Angle constrain is ignored in favor of edge snapping #40252

Closed
opened 2014-05-19 00:14:46 +02:00 by gandalf3 · 9 comments
Member

System Information
Archlinux
Nvidia GTX 460
Blender Version
Broken: f93bc76

Short description of error
Angle constrain is ignored in some cases

Exact steps for others to reproduce the error

  1. Open angle_constrain_knife.blend
  2. Press K and click on one of the middle vertices
  3. Press C
  4. Move cursor over edge (but not quite in line with the white guideline)

examp579.png

**System Information** Archlinux Nvidia GTX 460 **Blender Version** Broken: f93bc76 **Short description of error** Angle constrain is ignored in some cases **Exact steps for others to reproduce the error** 1. Open [angle_constrain_knife.blend](https://archive.blender.org/developer/F89384/angle_constrain_knife.blend) 2. Press K and click on one of the middle vertices 3. Press C 4. Move cursor over edge (but not quite in line with the white guideline) ![examp579.png](https://archive.blender.org/developer/F89385/examp579.png)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3

Added subscriber: @gwentiv

Added subscriber: @gwentiv

I see what you mean, and you are right, it behaves the same here… If i understand it correctly.

I see what you mean, and you are right, it behaves the same here… If i understand it correctly.
Campbell Barton was assigned by Sergey Sharybin 2014-05-19 10:27:37 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by 71c11dbb02

This issue was referenced by 71c11dbb02e3f41ae5c1e3c965fae0ce89ae4898

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 71c11dbb02.

Closed by commit 71c11dbb02.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40252
No description provided.