Fix T40252: Knife snapping ignores axis-constraint